# rcr-app

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: app.py  structures.py  utils.py
test/: test_rcr.py
