[tool.poetry]
name = "sparkbit"
version = "0.1.0"
description = ""
authors = ["Radoslaw Lis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
